# auto-commit.py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
auto_commit/: __init__.py  analyzer.py  cli.py
tests/: test_analyzer.py
